--- a/resume.html
+++ b/resume.html
@@ -71,13 +71,12 @@ Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
 "Share knowledge. Its one way to immortality" - Dalai Lama. 
-I strongly believe in this saying, and I intend to use my education and training in pursuing a career in an organization that is involved to improve human nutrition, health and environment for both developed and developing communities.
 </p>
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
 Professional career:
-  In Jan, 2021 I joined <a href="https://agreliantgenetics.com/">AgReliant Genetics, LLC </a> as Molecular breeding discovery scientist in Lebanon, Indiana
+  In Jan, 2021 I joined <a href="https://agreliantgenetics.com/">AgReliant Genetics, LLC </a> as Molecular breeding discovery scientist in Indiana
 </p>
  
 <p class="about-text">
