--- a/resume.html
+++ b/resume.html
@@ -64,13 +64,13 @@ comments powered by Disqus.
 <div id="aboutme-section">
 
 <p class="about-text">
-<span class="fa fa-coffee about-icon"></span>
-Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate about plants and cutting-edge technology. I have in-depth knowledge and a rigorous hands on experience in the field of plant breeding, quantitative genetics, computational biology and high-throughput phenotyping for over 10 years now, which I earned during my research work with plant breeders/geneticists, bioinformaticists, pathologist in my undergraduate, graduate and my postdoctoral career in the United States.
-</p>
-
-<p class="about-text">
 <span class="fa fa-heart about-icon"></span>
 "Share knowledge. Its one way to immortality" - Dalai Lama. 
+</p>
+  
+<p class="about-text">
+<span class="fa fa-coffee about-icon"></span>
+Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate about Agriculture and cutting-edge technologies. I have in-depth knowledge and a rigorous hands on experience in the field of plant breeding, quantitative genetics, computational biology and high-throughput phenotyping for over 10 years now, which I earned during my research work with plant breeders/geneticists, bioinformaticists, pathologist in my undergraduate, graduate and postdoctoral career in the United States.
 </p>
 
 <p class="about-text">
