--- a/resume.html
+++ b/resume.html
@@ -119,6 +119,12 @@ Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), 
 <center> <h2> Selected Research Publications </h2> </center> 
 
 <p>
+  <a href="https://www.frontiersin.org/articles/10.3389/fpls.2021.733899/abstract">Discovery of the REN11 locus from Vitis aestivalis for stable resistance to grapevine powdery mildew in a family segregating for several unstable and tissue-specific quantitative resistance loci </a>
+  <strong>Avinash Karn</strong>,  Cheng Zou,  Siraprapa Brooks,  Jonathan Fresnedo Ramirez, Franka Gabler,  Qi Sun, David Ramming,  Rachel Naegele, Craig Ledbetter and  Lance Cadle-Davidson.
+   <strong><italics>Frontiers in Plant Sciences - Plant breeding</italics></strong>
+</p>
+  
+<p>
   <a href="https://doi.org/10.1073/pnas.2023548118">Multiple independent recombinations led to hermaphroditism in grapevine</a>
   Cheng Zou, Mélanie Massonnet, Andrea Minio, Sagar Patel, Victor Llaca, <strong>Avinash Karn</strong>, Fred Gouker, Lance Cadle-Davidson, Bruce Reisch, Anne Fennell, Dario Cantu, Qi Sun, Jason P. Londo (2021)
 <strong><italics>Proceedings of the National Academy of Sciences </italics></strong>
