--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 layout: page
 meta-title: Photography
 bigimg: 
-  - "/vid/video-1633134870.mp4" : "Blooming Waterlily timelapse - Indiana"
+  - "/vid/lotus1.jpg" : "Blooming Waterlily timelapse - Indiana"
 
 ---
 <!-- particles.js exclusion -->
