--- a/resume.html
+++ b/resume.html
@@ -2,11 +2,11 @@
 layout: page
 meta-title: "Avi Karn, Ph.D."
 bigimg: 
+  - "/vid/avi_DH.jpg" : "DH nursery, Lebanon,IN"
   - "/image/frontpage/teosynTrial.jpg" : "Teosinte synthetic 2015 trial, Columbia MO"
   - "/image/resume/13320886_10207458585237713_5186022708311347609_o.jpg"
   - "/image/frontpage/FB_IMG_1554342301977.jpg"
   - "/image/resume/1608620233551.jpg"
-  - "/image/resume/18491438_10210381412186560_6841675236304496593_o.jpg" : "PhD graduation ceremony 2017 Columbia MO"
   - "/image/frontpage/20170718_104421.jpg"
   - "/image/frontpage/20180915_095714.jpg"
   - "/image/frontpage/20151203_143557.jpg"
