--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,8 @@
 layout: page
 meta-title: Photography
 bigimg: 
-  - "/vid/lotus1.jpg" : "Blooming Waterlily timelapse - Indiana"
+  - "/vid/lotus1.jpg" : "Blooming Waterlily - Indiana"
+  - "/vid/lotus2.jpg" : "Blooming Waterlily - Indiana"
 
 ---
 <!-- particles.js exclusion -->
