--- a/index.html
+++ b/index.html
@@ -114,3 +114,12 @@ comments powered by Disqus.
   gtag('js', new Date());
   gtag('config', 'UA-123359651-1');
 </script>
+
+ 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5126027065024936",
+    enable_page_level_ads: true
+  });
+</script>
