--- a/resume.html
+++ b/resume.html
@@ -177,7 +177,7 @@ Noam Reshef, <strong>Avinash Karn</strong>, David C Manns, Anna Katharine Mansfi
 
 <h1 id="contact">Contact</h1>
 <p>
-  Click <a href="mailto:avi.karn6@gmail.com?subject=Message from AviKarn.com"> here to email me your questions</a> or find me on <a   href="https://www.linkedin.com/in/avikarn/">LinkedIn</a>
+  Click <a href="mailto:avi.karn6@gmail.com?subject=Message from AviKarn.com"> here to email me your questions</a> or find me on <a   href="https://www.linkedin.com/in/avikarnphd">LinkedIn</a>
 </p>
 
 <form action="https://formspree.io/akarn@mail.missouri.edu" method="POST" class="form" id="contact-form">
