--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Avi Karn, Ph.D."
-subtitle: Molecular Breeding Discovery Scientist @AgReliant Genetics. Former Postdoc @Cornell University & @IGBIllinois University of Illinois. Alumni PhD @Mizzou & BSc @TrumanState
+subtitle: Molecular Breeder | Quantitative Geneticist | Computational Biologist
 
 bigimg: 
   - "/image/frontpage/rhampseq_core_genome.jpg" : "Vitis core genome and rhAmpSeq genetic markers (Nature Comm 2020)"
