--- a/resume.html
+++ b/resume.html
@@ -72,19 +72,14 @@ Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate 
 </p>
 
 <p class="about-text">
-<span class="fa fa-briefcase about-icon"></span>
-Professional career:
-  In Jan, 2021 I joined <a href="https://agreliantgenetics.com/">AgReliant Genetics, LLC </a> as Molecular breeding discovery scientist in Indiana
-</p>
- 
-<p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Academic career:
+Professional & Academic career:
 <ul>
-  <li> 2018-2020 Postdoc - Computational Biologist — Cornell University, NY, USA </li>
-  <li> 2017 Postdoc - Maize geneticist — University of Illinois, Urbana-Champaign, USA </li>
-  <li> 2012–2017 PhD - Maize Breeding, Genetics & Genomics — University of Missouri Columbia, Columbia, MO, USA</li>
-  <li> 2008–2012 BSc - Agricultural Sciences — Truman State University, Kirksville, MO, USA </li>
+  <li> 2021,01 - Present - Molecular Breeder & Discovery Scientist @ AgReliant Genetics, LLC </li>
+  <li> 2018-2020 Postdoc - Computational Biologist @ Cornell University, NY, USA </li>
+  <li> 2017 Postdoc - Maize geneticist @ University of Illinois, Urbana-Champaign, USA </li>
+  <li> 2012–2017 PhD - Maize Breeding, Genetics & Genomics @ University of Missouri Columbia, Columbia, MO, USA</li>
+  <li> 2008–2012 BSc - Agricultural Sciences @ Truman State University, Kirksville, MO, USA </li>
 </ul>
 </p>
 
