--- a/resume.html
+++ b/resume.html
@@ -75,11 +75,11 @@ Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate 
 <span class="fa fa-graduation-cap about-icon"></span>
 Professional & Academic career:
 <ul>
-  <li> 2021,01 - Present - Molecular Breeder & Discovery Scientist @ AgReliant Genetics, LLC </li>
-  <li> 2018-2020 Postdoc - Computational Biologist @ Cornell University, NY, USA </li>
-  <li> 2017 Postdoc - Maize geneticist @ University of Illinois, Urbana-Champaign, USA </li>
-  <li> 2012–2017 PhD - Maize Breeding, Genetics & Genomics @ University of Missouri Columbia, Columbia, MO, USA</li>
-  <li> 2008–2012 BSc - Agricultural Sciences @ Truman State University, Kirksville, MO, USA </li>
+  <li> 2021,01 - Present - Molecular Discovery Breeder @ AgReliant Genetics, IN, USA</li>
+  <li> 2018-2020 - Postdoc - Computational Biologist @ Cornell University, NY, USA </li>
+  <li> 2017 - Postdoc - Maize geneticist @ University of Illinois, Urbana-Champaign, USA </li>
+  <li> 2012–2017 - PhD - Maize Breeding, Genetics & Genomics @ University of Missouri Columbia, Columbia, MO, USA</li>
+  <li> 2008–2012 - BSc - Agricultural Sciences @ Truman State University, Kirksville, MO, USA </li>
 </ul>
 </p>
 
@@ -104,7 +104,7 @@ Language Skills: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and Basic
 
 <p class="about-text">
 <span class="fa fa-paint-brush about-icon"></span>
-Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), Stamp Collecting, Robotics,    Bird watching, Fish keeping, Gardening
+Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), Stamp Collecting, Robotics, Bird watching, Fish keeping, Gardening
 </p>
 
 </div>
