--- a/resume.html
+++ b/resume.html
@@ -112,6 +112,11 @@ Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), 
 <center> <h2> Selected Research Publications </h2> </center> 
 
 <p>
+  <a href="https://doi.org/10.3390/genes12121962">The Genetic Basis of Anthocyanin Acylation in North American Grapes (Vitis spp.).</a>
+  <strong>Avinash Karn</strong>, Luis Diaz-Garcia, Noam Reshef, Cheng Zou, David C. Manns, Lance Cadle-Davidson, Anna Katharine Mansfield, Bruce I. Reisch, and Gavin L. Sacks.  <strong><italics>Genes</strong></italics> 12, no. 12 (2021): 1962.
+</p>
+
+<p>
   <a href="https://www.frontiersin.org/articles/10.3389/fpls.2021.733899/abstract">Discovery of the REN11 locus from Vitis aestivalis for stable resistance to grapevine powdery mildew in a family segregating for several unstable and tissue-specific quantitative resistance loci </a>
   <strong>Avinash Karn</strong>,  Cheng Zou,  Siraprapa Brooks,  Jonathan Fresnedo Ramirez, Franka Gabler,  Qi Sun, David Ramming,  Rachel Naegele, Craig Ledbetter and  Lance Cadle-Davidson.
    <strong><italics>Frontiers in Plant Sciences - Plant breeding</italics></strong>
