--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ bigimg:
   - "/image/frontpage/circos_teonilNAM2.png" : "Shared QTLs in TeoNILs and NAM for seed composition (Karn et al 2017)"
   - "/image/frontpage/20170622_113203.jpg" : "Minirhizotron Tubes Installation"
   - "/image/frontpage/maizefield.jpg" : "teosinte x maize trial"
+  - "/image/frontpage/corn.jpg" : "maize diversity"
 ---
 
 
