--- a/photography.html
+++ b/photography.html
@@ -6,6 +6,11 @@ bigimg:
   - "/vid/lotus2.jpg" : "Blooming Waterlily - Indiana"
 
 ---
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5126027065024936"
+     crossorigin="anonymous"></script>
+
+
 <!-- particles.js exclusion -->
 <style>
   #particles-js{
