--- a/astronomy.html
+++ b/astronomy.html
@@ -2,8 +2,9 @@
 layout: astronomy-page
 
 ---
-  
-</style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5126027065024936"
+     crossorigin="anonymous"></script>  
+
 
 <style>
 div.gallery {
