--- a/resume.html
+++ b/resume.html
@@ -136,7 +136,7 @@ Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), 
 <p>
 <a href="https://doi.org/10.1101/2020.12.14.422701">Stable QTL for malate levels in ripe fruit and their transferability across Vitis species</a>
 Noam Reshef, <strong>Avinash Karn</strong>, David C Manns, Anna Katharine Mansfield, Lance Cadle-Davidson, Bruce Reisch, Gavin L Sacks(2020)
-<strong><italics>Theoretical Applied Genetics (Submitted)</italics></strong>
+<strong><italics>Nature's Horticulture Research (Accepted)</italics></strong>
 </p>
 
 <p>
