--- a/resume.html
+++ b/resume.html
@@ -134,9 +134,9 @@ Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), 
 </p>
 
 <p>
-<a href="https://doi.org/10.1101/2020.12.14.422701">Stable QTL for malate levels in ripe fruit and their transferability across Vitis species</a>
-Noam Reshef, <strong>Avinash Karn</strong>, David C Manns, Anna Katharine Mansfield, Lance Cadle-Davidson, Bruce Reisch, Gavin L Sacks(2020)
-<strong><italics>Nature's Horticulture Research (Accepted)</italics></strong>
+<a href="https://academic.oup.com/hr/article/doi/10.1093/hr/uhac009/6541265">Stable QTL for malate levels in ripe fruit and their transferability across Vitis species</a>
+Noam Reshef, <strong>Avinash Karn</strong>, David C Manns, Anna Katharine Mansfield, Lance Cadle-Davidson, Bruce Reisch, Gavin L Sacks(2022)
+<strong><italics>Horticulture Research</italics></strong>
 </p>
 
 <p>
