--- a/resume.html
+++ b/resume.html
@@ -2,14 +2,8 @@
 layout: page
 meta-title: "Avi Karn, Ph.D."
 bigimg: 
-  - "/vid/avi_DH.jpg" : "DH nursery, Lebanon,IN"
-  - "/image/frontpage/teosynTrial.jpg" : "Teosinte synthetic 2015 trial, Columbia MO"
-  - "/image/resume/13320886_10207458585237713_5186022708311347609_o.jpg"
-  - "/image/frontpage/FB_IMG_1554342301977.jpg"
-  - "/image/resume/1608620233551.jpg"
-  - "/image/frontpage/20170718_104421.jpg"
-  - "/image/frontpage/20180915_095714.jpg"
-  - "/image/frontpage/20151203_143557.jpg"
+  - "/image/resume/IMG_7960.jpg"
+
 ---
 
 <script> 
