--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@ layout: page
 meta-title: "Avi Karn, Ph.D."
 bigimg: 
   - "/image/resume/IMG_7960.jpg"
+  - "/image/resume/IMG_7969.jpg"
+  - "/image/resume/IMG_7972.jpg"
+
 
 ---
 
