--- a/resume.html
+++ b/resume.html
@@ -72,21 +72,21 @@ Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate 
 <span class="fa fa-graduation-cap about-icon"></span>
 Professional & Academic career:
 <ul>
-  <li> 2018-2020 - Postdoc - Computational Biologist @ Cornell University, NY, USA </li>
-  <li> 2017 - Postdoc - Maize geneticist @ University of Illinois, Urbana-Champaign, USA </li>
-  <li> 2012–2017 - PhD - Maize Breeding, Genetics & Genomics @ University of Missouri Columbia, Columbia, MO, USA</li>
-  <li> 2008–2012 - BSc - Agricultural Sciences @ Truman State University, Kirksville, MO, USA </li>
+  <li>Cornell University, New York, USA - 2018-2020 - Computational Biologist (PostDoc)</li>
+  <li>University of Illinois, Illinois , USA - 2017 - Maize geneticist (Postdoc)</li>
+  <li>University of Missouri Columbia, Missouri, USA - 2012–2017 - PhD Maize Breeding, Genetics & Genomics</li>
+  <li>Truman State University, Missouri, USA - 2008–2012 - BSc AgSc Plant breeding & Genetics</li>
 </ul>
 </p>
 
 <p class="about-text">
 <span class="fa fa-terminal about-icon"></span>
-Technical Skills: R, Python, Statistics, Machine Learning, Genetics, Genomics, Plant Breeding, Molecular Biology, Quantitative Genetics, Data Processing in Shell, Bioinformatics, UNIX/LINUX, BASH, HPC cluster, PERL, CSS, HTML, SQL, and GitHub 
+Overall Technical Skills: R, Plant Breeding, Quantitative Genetics, Genomics, UNIX/LINUX, HPC cluster, PERL, HTML/CSS, SQL, GitHub, Spotfire
 </p>
 
 <p class="about-text">
 <span class="fa fa-leaf about-icon"></span>
-Agriculture & Biological skills:
+Lab and Field related skills:
 <ul>
  <li>Lab Skills: DNA extraction, PCR, Gel Electrophoresis, Microscopy </li>
  <li>Farming Skills: Plowing Field with Tractor, Seed Planting, Pollination</li>
@@ -100,7 +100,7 @@ Language Skills: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and Basic
 
 <p class="about-text">
 <span class="fa fa-paint-brush about-icon"></span>
-Hobbies: Astronomy, Painting (watercolor), Cooking (American, Indian, Spanish), Stamp Collecting, Robotics, Bird watching, Fish keeping, Gardening
+Hobbies: Astronomy, Painting (watercolor), Cooking (American, Nepalese, Indian, Spanish), Stamp Collecting, Robotics, Bird watching, Fish keeping, Gardening
 </p>
 
 </div>
