--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: page_noMarq.html
 meta-title: "Avi Karn, Ph.D."
 bigimg: 
   - "/image/resume/IMG_7960.jpg"
@@ -28,7 +28,7 @@ comments powered by Disqus.
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["Bioinformatics.", "Data Science.", "Statistics.","Genomics.","Genetics.","Plant breeding.", "Machine Learning."],
+      strings: ["Bioinformatics.", "Data Science.", "Statistics.","Genomics.","Genetics.","Plant breeding."],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000,
