--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,7 @@ Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate 
 Professional & Academic career:
 <ul>
   <li>Cornell University, New York, USA - 2018-2020 - Computational Biologist (PostDoc)</li>
-  <li>University of Illinois, Illinois , USA - 2017 - Maize geneticist (Postdoc)</li>
+  <li>University of Illinois Urbana-Champaign, Illinois , USA - 2017 - Maize geneticist (Postdoc)</li>
   <li>University of Missouri Columbia, Missouri, USA - 2012–2017 - PhD Maize Breeding, Genetics & Genomics</li>
   <li>Truman State University, Missouri, USA - 2008–2012 - BSc AgSc Plant breeding & Genetics</li>
 </ul>
@@ -80,21 +80,22 @@ Professional & Academic career:
 
 <p class="about-text">
 <span class="fa fa-terminal about-icon"></span>
-Overall Technical Skills: R, Plant Breeding, Quantitative Genetics, Genomics, UNIX/LINUX, HPC cluster, PERL, HTML/CSS, SQL, GitHub, Spotfire
+Professional Expertise: Plant Breeding, Quantitative Genetics, Genomics & Computational Biology 
 </p>
 
 <p class="about-text">
 <span class="fa fa-leaf about-icon"></span>
-Lab and Field related skills:
+Technical skills:
 <ul>
+ <li>Technical Skills: Experimental Design, Data analysis and Visualization in: R, Python, UNIX/LINUX, HPC Cluster, PERL, HTML/CSS, SQL, GitHub, Spotfire</li>
  <li>Lab Skills: DNA extraction, PCR, Gel Electrophoresis, Microscopy </li>
- <li>Farming Skills: Plowing Field with Tractor, Seed Planting, Pollination</li>
+ <li>Farming Skills: Plowing Field with Tractor, Plantings, Pollination, Harvesting, Walking Field</li>
 </ul>
 </p>
 
 <p class="about-text">
 <span class="fa fa-language about-icon"></span>
-Language Skills: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and Basic Spanish skills
+Language Skills: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and basic Spanish
 </p>
 
 <p class="about-text">
