--- a/resume.html
+++ b/resume.html
@@ -85,11 +85,17 @@ Professional Expertise: Plant Breeding, Quantitative Genetics, Genomics & Comput
 
 <p class="about-text">
 <span class="fa fa-leaf about-icon"></span>
-Technical skills:
+Skills & Expertise:
 <ul>
- <li>Technical Skills: Experimental Design, Data analysis and Visualization in: R, Python, UNIX/LINUX, HPC Cluster, PERL, HTML/CSS, SQL, GitHub, Spotfire</li>
- <li>Lab Skills: DNA extraction, PCR, Gel Electrophoresis, Microscopy </li>
- <li>Farming Skills: Plowing Field with Tractor, Plantings, Pollination, Harvesting, Walking Field</li>
+  <li>Plant Breeding: Quantitative Genetics, Genomics, Simulations, Optimization, Population development, Experimental design, Walking Plots/Notes taking, Pollination & Harvesting. </li>
+	<li><li>Programming: R, Python, SQL </li>
+	<li>Software: Haploview, TASSEL, MapChart, LepMap, PLINK, PRISM</li>
+	<li>Machine Learning: Regression, Classification, Clustering and Time Series</li>
+	<li>Database Systems: GitHub</li>
+	<li>Scripting Languages: PowerShell, Linux, PERL</li>
+	<li>Reporting Tool: Spotfire, Tableau</li>
+  <li>Laboratory: DNA extraction, DNA library preparation, marker design, PCR, Gel Electrophoresis</li>
+
 </ul>
 </p>
 
