--- a/astronomy.html
+++ b/astronomy.html
@@ -3,8 +3,9 @@ layout: astronomy-page
 
 ---
 
-<iframe id="innerFrame" name="innerFrame" sandbox="allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox allow-downloads" frameborder="0" allowfullscreen="" src="https://eyes.nasa.gov/apps/orrery/#/home" style="overflow: auto;">
-</iframe>
+
+<iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="600px" height="500px"></iframe>
+
 
 <style>
 div.gallery {
