--- a/astronomy.html
+++ b/astronomy.html
@@ -4,7 +4,7 @@ layout: astronomy-page
 ---
 
 
-<iframe src="https://eyes.nasa.gov/apps/orrery/#/home" style="overflow:hidden;height:100%;width:100%" ></iframe>
+<iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="1200px" height="500px"></iframe>
 
 
 <style>
