--- a/astronomy.html
+++ b/astronomy.html
@@ -4,7 +4,7 @@ layout: astronomy-page
 ---
 
 
-<iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="1200px" height="500px"></iframe>
+<iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="100%" height="500px"></iframe>
 
 
 <style>
