--- a/astronomy.html
+++ b/astronomy.html
@@ -6,6 +6,7 @@ layout: astronomy-page
 
 <iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="100%" height="500px"></iframe>
 
+<iframe src="https://eyes.nasa.gov/apps/earth/#/" width="100%" height="500px"></iframe>
 
 <style>
 div.gallery {
@@ -137,7 +138,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="/image/astronomy/stack_saturn_080720-2.png">
-      <img src="/image/astronomy/stack_saturn_080720-2.png" alt="Danis Tulip, Spring 2020" width="auto" height="400" class="img-thumbnail">
+      <img src="/image/astronomy/stack_saturn_080720-2.png" width="auto" height="400" class="img-thumbnail">
     </a>
   </div>
 </div>
@@ -145,7 +146,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a href="/image/astronomy/solar_eclipse_2017.jpg">
-      <img src="/image/astronomy/solar_eclipse_2017.jpg" alt="Hybrid White Tea Rose, Spring 2020" width="auto" height="400" class="img-thumbnail">
+      <img src="/image/astronomy/solar_eclipse_2017.jpg" width="auto" height="400" class="img-thumbnail">
     </a>
   </div>
 </div>
