--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ bigimg:
   - "/image/resume/IMG_7970.jpg"
   - "/image/resume/IMG_7972.jpg"
   - "/image/frontpage/corn.jpg" : "maize diversity"
+  - '/image/frontpage/n1_egphi_z78.PNG" "Network Diagram"
 ---
 
 
