--- a/astronomy.html
+++ b/astronomy.html
@@ -159,3 +159,7 @@ div.desc {
 <div class="clearfix"></div>
 
 <iframe src="https://eyes.nasa.gov/apps/mars2020/#/home" width="100%" height="500px"></iframe>
+
+<iframe src="https://eyes.nasa.gov/curiosity/" width="100%" height="500px"></iframe>
+
+
