--- a/resume.html
+++ b/resume.html
@@ -105,7 +105,7 @@ Language Skills: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and basic
 
 <p class="about-text">
 <span class="fa fa-paint-brush about-icon"></span>
-Hobbies: Astronomy, Painting (watercolor), Cooking (American, Nepalese, Indian, Spanish), Stamp Collecting, Robotics, Bird watching, Fish keeping, Gardening
+  Hobbies: <a href="https://avikarn.com/astronomy/">Astronomy</a>, Painting (watercolor), <a href="https://avikarn.com/foodblog/"> Cooking (American, Nepalese, Indian, Spanish)</a>, <a href ="https://photos.google.com/share/AF1QipP70Bsux9r23oQHDH2Axt680JJi1-_BtZfDhkZ_kH7niPe1PeXdYLxcXYrtieePsA?key=UVUtR19ySDB1QThOVUd4OHhpdzJNOGNWWW5rTEtB">Stamp Collecting</a>, Robotics, Bird watching, Fish keeping, Gardening
 </p>
 
 </div>
