--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ bigimg:
   - "/image/frontpage/n1_egphi_z78.PNG" : "Network Diagram"
 ---
 
+<script async src="https://cse.google.com/cse.js?cx=111823314db21521d"></script>
+<div class="gcse-search"></div>
 
 <script> 
 (function() { // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
