--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Avi Karn, Ph.D."
-subtitle: Molecular Breeder | Quantitative Geneticist | Computational Biologist
+title: "Avinash Karn, Ph.D."
+subtitle: Plant Scientist| Quantitative Geneticist | Computational Biologist
 
 bigimg: 
   - "/image/frontpage/rhampseq_core_genome.jpg" : "Vitis core genome and rhAmpSeq genetic markers (Nature Comm 2020)"
