--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,9 @@ comments powered by Disqus.
   
 <p class="about-text">
 <span class="fa fa-coffee about-icon"></span>
-Hi! My name is Avinash Karn, I go by <strong>Avi</strong>. I am very passionate about Agriculture and cutting-edge technologies. I have in-depth knowledge and a rigorous hands on experience in the field of plant breeding, quantitative genetics, computational biology and high-throughput phenotyping for over 10 years now, which I earned during my research work with plant breeders/geneticists, bioinformaticists, pathologist in my undergraduate, graduate and postdoctoral career in the United States.
+Hello and Welcome!
+  My name is Avinash Karn, I go by <strong>Avi Karn</strong>. \
+  Professional in the field of plant breeding, quantitative genetics, computational biology and high-throughput phenotyping.
 </p>
 
 <p class="about-text">
@@ -80,7 +82,7 @@ Professional & Academic career:
 
 <p class="about-text">
 <span class="fa fa-terminal about-icon"></span>
-Professional Expertise: Plant Breeding, Quantitative Genetics, Genomics & Computational Biology 
+Professional Expertise: Plant Breeding, Data Science, Quantitative Genetics, Genomics & Computational Biology 
 </p>
 
 <p class="about-text">
