--- a/resume.html
+++ b/resume.html
@@ -65,8 +65,8 @@ comments powered by Disqus.
 <p class="about-text">
 <span class="fa fa-coffee about-icon"></span>
 Hello and Welcome!
-  My name is Avinash Karn, I go by <strong>Avi Karn</strong>. \
-  Professional in the field of plant breeding, quantitative genetics, computational biology and high-throughput phenotyping.
+  My name is Avinash Karn and I go by <strong>Avi Karn</strong>.
+  I am  a professional in the field of plant breeding, quantitative genetics, computational biology and high-throughput phenotyping.
 </p>
 
 <p class="about-text">
