--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@ comments powered by Disqus.
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-"Share knowledge. Its one way to immortality" - Dalai Lama. 
+I believe: "Share knowledge. Its one way to immortality" - Dalai Lama. 
 </p>
   
 <p class="about-text">
@@ -71,7 +71,7 @@ Hello and Welcome!
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Professional & Academic career:
+My Professional & Academic career:
 <ul>
   <li>Cornell University, New York, USA - 2018-2020 - Computational Biologist (PostDoc)</li>
   <li>University of Illinois Urbana-Champaign, Illinois , USA - 2017 - Maize geneticist (Postdoc)</li>
@@ -82,12 +82,12 @@ Professional & Academic career:
 
 <p class="about-text">
 <span class="fa fa-terminal about-icon"></span>
-Professional Expertise: Plant Breeding, Data Science, Quantitative Genetics, Genomics & Computational Biology 
+My Expertise: Plant Breeding, Data Science, Quantitative Genetics, Genomics & Computational Biology 
 </p>
 
 <p class="about-text">
 <span class="fa fa-leaf about-icon"></span>
-Skills:
+My Technical Skills:
 <ul>
   <li>Plant Breeding: Quantitative Genetics, Genomics, Simulations, Optimization, Population development, Experimental design, Walking Plots/Notes taking, Pollination & Harvesting.</li>
   <li>Programming: R, Python, SQL</li>
@@ -102,17 +102,17 @@ Skills:
 
 <p class="about-text">
 <span class="fa fa-language about-icon"></span>
-Language Skills: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and basic Spanish
+Languages I Speak: Fluent in English, Nepali, Hindi, Maithali, Bhojpuri, and basic Spanish
 </p>
 
 <p class="about-text">
 <span class="fa fa-paint-brush about-icon"></span>
-  Hobbies: <a href="https://avikarn.com/astronomy/">Astronomy</a>, Painting (watercolor), <a href="https://avikarn.com/foodblog/"> Cooking (American, Nepalese, Indian, Spanish)</a>, <a href ="https://photos.google.com/share/AF1QipP70Bsux9r23oQHDH2Axt680JJi1-_BtZfDhkZ_kH7niPe1PeXdYLxcXYrtieePsA?key=UVUtR19ySDB1QThOVUd4OHhpdzJNOGNWWW5rTEtB">Stamp Collecting</a>, Robotics, Bird watching, Fish keeping, Gardening
+  Things I like to do: <a href="https://avikarn.com/astronomy/">Astronomy</a>, Painting (watercolor), <a href="https://avikarn.com/foodblog/"> Cooking (American, Nepalese, Indian, Spanish)</a>, <a href ="https://photos.google.com/share/AF1QipP70Bsux9r23oQHDH2Axt680JJi1-_BtZfDhkZ_kH7niPe1PeXdYLxcXYrtieePsA?key=UVUtR19ySDB1QThOVUd4OHhpdzJNOGNWWW5rTEtB">Stamp Collecting</a>, Robotics, Bird watching, Fish keeping, Gardening
 </p>
 
 </div>
 
-<center> <h2> Selected Research Publications </h2> </center> 
+<center> <h2> My Research Publications </h2> </center> 
 
 <p>
   <a href="https://doi.org/10.3390/genes12121962">The Genetic Basis of Anthocyanin Acylation in North American Grapes (Vitis spp.).</a>
