--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ---
 layout: page
 title: "Avinash Karn, Ph.D."
-subtitle: Plant Scientist| Quantitative Geneticist | Computational Biologist
+subtitle: Agricultural Scientist| Quantitative Geneticist | Computational Biologist
 
 bigimg: 
-  - "/image/frontpage/rhampseq_core_genome.jpg" : "Vitis core genome and rhAmpSeq genetic markers (Nature Comm 2020)"
+  - "/image/frontpage/rhampseq_core_genome.jpg" : " Core genome and rhAmpSeq genetic markers (Nature Comm 2020)"
   - "/image/frontpage/palm.jpg" : "Collecting data"
   - "/image/frontpage/geneticMap.jpg" : "Genetic Mapping"
   - "/image/frontpage/mlm.jpg" : "Genome-wide association study"
   - "/image/frontpage/haploview.png" : "Haploblock Haploview "
   - "/image/frontpage/epistasis2.png" : "Epsistatic interactions"
-  - "/image/frontpage/circos_teonilNAM2.png" : "Shared QTLs in TeoNILs and NAM for seed composition (Karn et al 2017)"
-  - "/image/frontpage/20170622_113203.jpg" : "Minirhizotron Tubes Installation"
+  - "/image/frontpage/circos_teonilNAM2.png" : "Shared QTLs in the Teosnite NIL and NAM for seed composition (Karn et al 2017)"
+  - "/image/frontpage/20170622_113203.jpg" : "Minirhizotron Tubes Installation to study maize roots in field condition"
   - "/image/resume/IMG_7970.jpg"
   - "/image/resume/IMG_7972.jpg"
-  - "/image/frontpage/corn.jpg" : "maize diversity"
+  - "/image/frontpage/corn.jpg" : "A-Maize-ing diversity"
   - "/image/frontpage/n1_egphi_z78.PNG" : "Network Diagram"
 ---
 
